--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aa95-syntax",
+  "name": "รวยวีไอพี เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ✔️ ❤️ ♕88",
   "theme": "syntax",
   "version": "0.2.0",
   "description": "รวยวีไอพี✔️ ❤️ ♕ เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ตลอด 24 ชั่วโมง",
